# DCE_quasilinear

./: CMakeLists.txt  fftw_example.cpp  pyVerify.py  readCSV_createDir.py  run_evolution.cpp  sympy_verify_H1R.py  verify_H1R.py
evolution/: evolution.cpp  evolution.hpp
